<resources>
    <string name="app_name">BaseApplication</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="tools">Tools</string>
    <string name="history">History</string>
    <string name="satisfied">Satisfied with the result?</string>
    <string name="appreciate">We’d greatly appreciate if you can rate us</string>
    <string name="rate">Rate</string>
    <string name="feedback">Feedback</string>
    <string name="not_satisfied">What’s it that you are not satisfied with?</string>
    <string name="poor_effect">Poor effect</string>
    <string name="bugs">Bugs</string>
    <string name="face_details">Face details</string>
    <string name="premium">Premium</string>
    <string name="distortion">Distortion</string>
    <string name="hint_detailed_feedback">We would greatly appreciate it if you could kindly give us detailed feedback.</string>
    <string name="send">Send</string>
    <string name="allow_notification">Allow notification</string>
    <string name="detail_noti"><![CDATA[Turn on notifications to be notified of special offers and new features of <Name app>]]></string>
    <string name="allow">Allow</string>
    <string name="no_internet">No internet</string>
    <string name="require_internet">This feature require internet to work...</string>
    <string name="finance">finance</string>
    <string name="do_you_want_to_exit">Do you want to exit?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="this_action">This action may contain ads...</string>
    <string name="loan">Loan</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="flag">Flag</string>
    <string name="english">English</string>
    <string name="from_personal_to_business_loans_calculate_payments_easily_in_one_place">From personal to business loans, \ncalculate payments easily in one place</string>
    <string name="smart_savings_made_simple">Smart Savings Made Simple</string>
    <string name="boost_your_savings_with_our_fixed_and_recurring_deposit_calculators">Boost your savings with our fixed and \nrecurring deposit calculators</string>
    <string name="handy_conversion_tools">Handy Conversion Tools</string>
    <string name="convert_currencies_effortlessly_with_our_built_in_tools">Convert currencies effortlessly with our \nbuilt-in tools</string>
    <string name="your_easy_finance_buddy">Your Easy Finance Buddy</string>
    <string name="make_life_simpler_with_quick_calculations_for_all_your_financial_plans">Make life simpler with quick \ncalculations for all your financial plans.</string>
    <string name="currency_unit">Currency Unit</string>
    <string name="todo">TODO</string>
    <string name="currency_exchange">Currency Exchange</string>
    <string name="reset">Reset</string>
    <string name="enter_a_valid_number">Enter a valid number (maximum of 999 999 999 999)</string>
    <string name="exchange">Exchange</string>
    <string name="time_zone_exchange">Time Zone Exchange</string>
    <string name="fixed_deposit">Fixed Deposit</string>
    <string name="investment_amount">Investment Amount</string>
    <string name="interest_rate">Interest Rate</string>
    <string name="fd_tenure_fd_term">FD Tenure (FD term)</string>
    <string name="compounded_interest">Compounded Interest Frequency</string>
    <string name="start_date">Start Date</string>
    <string name="easily_convert_between_currencies_and_get_the_most_up_to_date_rates">Easily convert between currencies and get the most up to date rates.</string>
</resources>