<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="302dp"
    android:layout_height="143dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.ExitDialog">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        app:cardCornerRadius="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/do_you_want_to_exit"
            android:textAlignment="center"
            android:textColor="@color/btn_color"
            android:textSize="20sp"
            android:textStyle="bold" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/cancelBtn"
                android:layout_width="119dp"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_cancel_exit"
                android:paddingHorizontal="16dp"
                android:paddingVertical="12dp"
                android:text="@string/no"
                android:textColor="@color/opt_selector"
                android:textAlignment="center"
                android:textSize="15sp"
                android:textStyle="bold"/>
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/allowBtn"
                android:layout_width="119dp"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_background"
                android:paddingHorizontal="16dp"
                android:paddingVertical="12dp"
                android:text="@string/yes"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="15sp"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>