<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.FixedDepositActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:background="@drawable/background">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:layout_marginHorizontal="16dp"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/return_btn"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_arrow"
                android:layout_marginEnd="12dp"
                />
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fixed_deposit"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                />
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/reset_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset"
                android:background="@drawable/selector_resetbtn"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:paddingVertical="6dp"
                android:paddingHorizontal="10dp"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>
    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="21dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="8dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/investment_amount"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="14dp"
                android:paddingHorizontal="12dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/background_inputfield">
                <EditText
                    android:id="@+id/investment_txt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/normal_txt"
                    android:inputType="number"
                    android:textSize="14sp"
                    android:background="@color/transparent"
                    android:textStyle="bold"
                    android:layout_weight="1"/>
                <Spinner
                    android:id="@+id/currency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/interest_rate"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="14dp"
                android:paddingHorizontal="12dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/background_inputfield">
                <EditText
                    android:id="@+id/interest_txt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/normal_txt"
                    android:inputType="number"
                    android:textSize="14sp"
                    android:background="@color/transparent"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:hint="1.5"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="%"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fd_tenure_fd_term"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="14dp"
                android:paddingHorizontal="12dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/background_inputfield">
                <EditText
                    android:id="@+id/FD_txt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/normal_txt"
                    android:inputType="number"
                    android:textSize="14sp"
                    android:background="@color/transparent"
                    android:textStyle="bold"
                    android:layout_weight="1"/>
                <Spinner
                    android:id="@+id/fd_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/compounded_interest"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="14dp"
                android:paddingHorizontal="12dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/background_inputfield">
                <EditText
                    android:id="@+id/compounded_txt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/normal_txt"
                    android:inputType="number"
                    android:textSize="14sp"
                    android:background="@color/transparent"
                    android:textStyle="bold"
                    android:layout_weight="1"/>
                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start_date"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"/>
            <LinearLayout
                android:id="@+id/date_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="14dp"
                android:paddingHorizontal="12dp"
                android:background="@drawable/selector_resetbtn">
                <TextView
                    android:id="@+id/start_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/normal_txt"
                    android:textStyle="bold"
                    android:layout_weight="1"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_calendar"/>
            </LinearLayout>
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/next_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_background"
                android:text="@string/next"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:paddingVertical="16dp"
                android:textStyle="bold"
                android:textSize="16sp"
                />
        </LinearLayout>
    </FrameLayout>
</LinearLayout>