<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.fragment.RateDialog"
    app:cardCornerRadius="10dp"
    android:background="@color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/satisfied"
            android:textAlignment="center"
            android:textColor="@color/normal_txt"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/appreciate"
            android:textAlignment="center"
            android:textColor="#6D6D6D"
            android:textFontWeight="400"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/start1"
                android:layout_width="31dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginRight="8dp"
                android:src="@drawable/star_filled"
                />
            <ImageView
                android:id="@+id/start2"
                android:layout_width="31dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginRight="8dp"
                android:src="@drawable/star_filled"
                />
            <ImageView
                android:id="@+id/start3"
                android:layout_width="31dp"
                android:layout_marginRight="8dp"

                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/star_filled"
                />
            <ImageView
                android:id="@+id/start4"
                android:layout_width="31dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginRight="8dp"

                android:src="@drawable/star_filled"
                />
            <ImageView
                android:id="@+id/start5"
                android:layout_width="31dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/empty_star"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/rateBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_background"
            android:paddingHorizontal="16dp"
            android:paddingVertical="18dp"
            android:text="@string/rate"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textStyle="bold"/>
    </LinearLayout>


</LinearLayout>