<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.CurrencyExchangeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:orientation="horizontal"
        android:id="@+id/background"
        android:background="@drawable/background"
        android:gravity="bottom"
        android:paddingHorizontal="16dp"
        android:paddingBottom="22.5dp">
        <ImageView
            android:id="@+id/return_btn"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_arrow"
            android:layout_marginEnd="12dp"
            />
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currency_exchange"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            />
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/reset_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:background="@drawable/selector_resetbtn"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:paddingVertical="6dp"
            android:paddingHorizontal="10dp"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="21dp"
        android:layout_marginHorizontal="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/background_inputfield"
            android:gravity="center_vertical">
            <EditText
                android:id="@+id/money_before"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:textSize="14sp"
                android:paddingVertical="15.5dp"
                android:paddingStart="12dp"
                android:background="@color/transparent"/>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#D9D9D9"
                android:layout_marginVertical="15dp"/>
            <Spinner
                android:id="@+id/country_before"
                android:layout_width="129dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"/>
        </LinearLayout>
        <TextView
            android:id="@+id/error_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:text="@string/enter_a_valid_number"
            android:textSize="12sp"
            android:visibility="gone"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_down"
            android:layout_marginVertical="12dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/background_inputfield"
            android:layout_marginBottom="20dp"
            android:gravity="center_vertical">
            <TextView
                android:id="@+id/money_after"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="14sp"
                android:paddingVertical="15.5dp"
                android:paddingStart="12dp" />
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#D9D9D9"
                android:layout_marginVertical="15dp"/>
            <Spinner
                android:id="@+id/country_after"
                android:layout_width="129dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/exchange_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_background"
            android:text="@string/exchange"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:paddingVertical="16dp"
            android:textStyle="bold"
            android:textSize="16sp"
            />

    </LinearLayout>
</LinearLayout>